--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
     "ngx-tetris": "^1.0.0",
+    "papercss": "^1.8.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
