--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "ngx-tetris": "^1.0.0",
     "papercss": "^1.8.3",
     "rxjs": "~7.4.0",
